sandbox/output
MedicineClashTest.java:31: error: cannot find symbol
        Customer customerNotTakingBothMedicines = new Customer("110101197010104510", "Ben", medicines);
                                                                                            ^
  symbol:   variable medicines
  location: class MedicineClashTest
MedicineClashTest.java:33: error: cannot find symbol
        assertEquals(expectedClashedSet, medicineClash.Of(customers));
                                         ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
2 errors
